--- a/app/static/bootstrap/css/simple-sidebar.css
+++ b/app/static/bootstrap/css/simple-sidebar.css
@@ -26,7 +26,7 @@
     height: 100%;
     margin-left: -250px;
     overflow-y: auto;
-    background: #000;
+    background: url("templates/tartan.png");
     -webkit-transition: all 0.5s ease;
     -moz-transition: all 0.5s ease;
     -o-transition: all 0.5s ease;
