--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -5,7 +5,7 @@
   <p style="Font-size:18px"><i>Not to be confused with <a href = "http://webapps.studentaffairs.cmu.edu/dining/ConceptInfo/?page=conceptDetails&conceptId=92">The Exchange</a>, located in the Tepper School of Business.</i></p>
   <p style="Font-size:18px">Here you can arrange meetings to buy and sell meal blocks or Dinex from the CMU Dining Plan.</p>
   {% if g.user.is_anonymous %}
-  <p><a href = "{{url_for('register')}}" class = "btn btn-info">Register a new account</a> or <a href = "{{url_for('login')}}" class = "btn btn-info">Sign in</a> with an existing account.	</p>
+  <p style="Font-size:18px"><a href = "{{url_for('register')}}" class = "btn btn-info">Register a new account</a> or <a href = "{{url_for('login')}}" class = "btn btn-info">Sign in</a> with an existing account.	</p>
 {% endif %}
 </div>
 {% endblock %}
